syntax="proto3";

package vyom1611.laptop_app;

import "memory_message.proto";

message CPU {
    //Brand of laptop CPU
    string brand = 1;
    //Name of CPU
    string name = 2;
    uint32 cpu_cores = 3;
    uint32 cpu_threads = 4;
    double min_ghz = 5;
    double max_ghz = 6;
}


message GPU {
    string brand = 1;
    string name = 2;
    double min_ghz = 3;
    double max_ghz = 4;
    Memory memory = 5;
}

option go_package = "./pb";